Fixing header formatting on mobile

--- a/style-about.css
+++ b/style-about.css
@@ -1,3 +1,7 @@
+html {
+  width: auto;
+}
+
 /* about.html header properties */
 .headerContent {
   background-image: url('botanical-keyboard.jpg');
