--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 */
 
 html {
-  width: fit-content;
   width: auto;
   height: auto;
   scroll-behavior: smooth;
